--- a/adoption/executive.html
+++ b/adoption/executive.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/recruit.css">
     <link rel="icon" href="../img/Rewrite_logo_only.png" type="image/png">
 </head>
 <body>
@@ -288,8 +289,8 @@
           <a class="m-circleBtn-element" href="../adoption/executive.html">
             <div class="m-bnrList__img">
               <picture>
-                <source media="(max-width:750px)" srcset="https://placehold.jp/187x139.png">
-                <img loading="lazy" decoding="async" src="https://placehold.jp/262x175.png" alt="社員採用">
+                <source media="(max-width:750px)" srcset="../img/recruit-exective-mini.jpg">
+                <img loading="lazy" decoding="async" src="../img/recruit-exective-mini.jpg" alt="社員採用">
               </picture>
             </div>
             <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeS">
@@ -303,8 +304,8 @@
           <a class="m-circleBtn-element" href="../adoption/employee.html">
             <div class="m-bnrList__img">
               <picture>
-                <source media="(max-width:750px)" srcset="https://placehold.jp/187x139.png">
-                <img loading="lazy" decoding="async" src="https://placehold.jp/262x175.png" alt="社員採用">
+                <source media="(max-width:750px)" srcset="../img/recruit-inner-2-mini.jpg">
+                <img loading="lazy" decoding="async" src="../img/recruit-inner-2-mini.jpg" alt="社員採用">
               </picture>
             </div>
             <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeS">
@@ -318,8 +319,8 @@
           <a class="m-circleBtn-element" href="../adoption/part.html">
             <div class="m-bnrList__img">
               <picture>
-                <source media="(max-width:750px)" srcset="https://placehold.jp/187x139.png">
-                <img loading="lazy" decoding="async" src="https://placehold.jp/262x175.png" alt="アルバイト採用">
+                <source media="(max-width:750px)" srcset="../img/recruit-inner-3-mini.jpg">
+                <img loading="lazy" decoding="async" src="../img/recruit-inner-3-mini.jpg" alt="アルバイト採用">
               </picture>
             </div>
             <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeS">
@@ -407,7 +408,7 @@
                   <ul class="m-btnOuter">
                     <li class="m-btnOuter__item">
                       <div class="m-arrowBtn m-arrowBtn--sizeL">
-                        <a class="m-arrowBtn-hover" href="/inquiry/form03">
+                        <a class="m-arrowBtn-hover" href="../contact.html">
                           <span class="m-arrowBtn-inline">
                             <!-- <span class="m-contact-icon"><img loading="lazy" decoding="async" src="/assets/img/common/contact_icon.svg" alt=""></span> -->
                             採用に関するお問い合わせ
