--- a/company/message.html
+++ b/company/message.html
@@ -633,7 +633,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<div class="wp-block-snow-monkey-blocks-btn-box smb-btn-box thd_mod-bottom_next_link"><div class="c-container"><div class="smb-btn-box__btn-wrapper"><a class="smb-btn smb-btn--full" href="../company/mission.html" style="--smb-btn--background-color:var(--_color-white);--smb-btn--color:var(--accent-color)"><span class="smb-btn__label">NEXT　/　PHILOSOPHY</span></a></div></div></div>
+<div class="wp-block-snow-monkey-blocks-btn-box smb-btn-box thd_mod-bottom_next_link"><div class="c-container"><div class="smb-btn-box__btn-wrapper"><a class="smb-btn smb-btn--full" href="../company/mission.html" style="--smb-btn--background-color:var(--_color-white);--smb-btn--color:var(--accent-color)"> <img src="../img/next/next-philosophy.png" class="next-img" alt=""></a></div></div></div>
 	
 	</div>
 
