--- a/company/partnar.html
+++ b/company/partnar.html
@@ -55,7 +55,7 @@
                             <button class="toggle-btn">＋</button>
                             </div>
                                     <div class="accordion-content">
-                                      <a href="../company.html" class="index-more">-会社概要</a>
+                                      <a href="../company.html" class="index-more">会社概要</a>
                                         <a href="../company/message.html" class="index-more">代表挨拶</a>
                                         <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
                                         <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
@@ -158,7 +158,7 @@
               
                     <ul class="p-group__list">
                         <li class="p-group__listItem">
-<a class="m-circleBtn-element" href="http://ai-voyage.net/">
+<a class="m-circleBtn-element" href="http://ai-voyage.net/" target="_blank">
 <div class="p-group__listItemBlock">
 <div class="p-group__listLogo p-group__listLogo--01">
 <img loading="lazy" decoding="async" src="../img/company/aivoyage.png" alt="">								</div>
@@ -168,6 +168,30 @@
 <div class="group-name">
 <p>
 株式会社アイ・ボヤージ 様
+</p>
+</div>
+</li>
+</ul>
+
+                </div>
+            </div>
+        </div>
+        <div class="l-block">
+            <div class="l-contents">
+                <div class="l-section">
+              
+                    <ul class="p-group__list">
+                        <li class="p-group__listItem">
+<a class="m-circleBtn-element" href="https://merginite-group.co.jp/" target="_blank">
+<div class="p-group__listItemBlock">
+<div class="p-group__listLogo p-group__listLogo--01">
+<img loading="lazy" decoding="async" src="https://placehold.jp/150x150.png" alt="">								</div>
+<div class="m-circleBtn small arrow-black"><span></span></div>
+</div>
+</a>
+<div class="group-name">
+<p>
+    株式会社Merginite 様
 </p>
 </div>
 </li>
