--- a/company/group.html
+++ b/company/group.html
@@ -447,9 +447,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                           <a href="../company.html" class="index-more">会社概要</a>
                                             <a href="../company/message.html" class="index-more">代表挨拶</a>
                                             <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
-                                            <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
-                                            <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
-                                            <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
+                                            <a href="../company.html#exective-members" class="index-more">グループ役員紹介</a>
+                                            <a href="../company.html#group-companys" class="index-more">グループパートナー企業</a>
+                                            
                                           </div>
                             </li>
                         </ul>
@@ -569,7 +569,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </nav>
 
 
-<div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_group js-inview"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper smb-section__contents-wrapper-group"><div class="smb-section__header"><h2 class="smb-section__title">GROUP COMPANIES</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">グループ会社一覧</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
+<div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_group js-inview"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper smb-section__contents-wrapper-group"><div class="smb-section__header"><h2 class="smb-section__title">GROUP COMPANIES</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">グループ会社紹介</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
 <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit is-style-smb-section-undecorated-title thd_group__sec"><div class="smb-section__inner"><div class="c-container c-container--no-padding"><div class="smb-section__contents-wrapper"><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
 <div class="wp-block-group is-layout-constrained wp-block-group-is-layout-constrained">
 <!-- <h3 class="wp-block-heading is-style-plain thd_group__sec__title">子会社</h3>   -->
@@ -838,9 +838,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a href="../company.html" class="index-more">会社概要</a>
                         <a href="../company/message.html" class="index-more">代表挨拶</a>
                         <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
-                        <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
-                        <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
-                        <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
+                        <a href="../company.html#exective-members" class="index-more">グループ役員紹介</a>
+                        <a href="../company.html#group-companys" class="index-more">グループパートナー企業</a>
+                        
                       </div>
         </li>
     </ul>
