--- a/company/message.html
+++ b/company/message.html
@@ -449,9 +449,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <a href="../company.html" class="index-more">会社概要</a>
                                       <a href="../company/message.html" class="index-more">代表挨拶</a>
                                       <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
-                                      <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
-                                      <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
-                                      <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
+                                      <a href="../company.html#exective-members" class="index-more">グループ役員紹介</a>
+                                      <a href="../company.html#group-companys" class="index-more">グループパートナー企業</a>
+                                      
                                     </div>
                       </li>
                   </ul>
@@ -701,9 +701,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <a href="../company.html" class="index-more">会社概要</a>
                       <a href="../company/message.html" class="index-more">代表挨拶</a>
                       <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
-                      <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
-                      <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
-                      <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
+                      <a href="../company.html#exective-members" class="index-more">グループ役員紹介</a>
+                      <a href="../company.html#group-companys" class="index-more">グループパートナー企業</a>
+                      
                     </div>
       </li>
   </ul>
