--- a/company/summary.html
+++ b/company/summary.html
@@ -61,8 +61,8 @@
                                     <a href="../company/message.html" class="index-more">代表挨拶</a>
                                     <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
                                     <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
-                                    <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
-                                    <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
+                                    <a href="../company.html#group-companys" class="index-more">グループパートナー企業</a>
+                                    
                                   </div>
                     </li>
                 </ul>
@@ -273,7 +273,7 @@
             </div>
           </li>
           <div class="group-companys">
-            <h2 class="group-company-wrap">グループ企業一覧</h2>
+            <h2 class="group-company-wrap">グループパートナー企業</h2>
             <li class="p-profile__listItem p-profile__listItem-upper">
               <div class="p-profile__listTxt">
                 <span class="group-company-name">株式会社Walk</span>
@@ -1110,8 +1110,8 @@
                               <a href="../company/message.html" class="index-more">代表挨拶</a>
                               <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
                               <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
-                              <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
-                              <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
+                              <a href="../company.html#group-companys" class="index-more">グループパートナー企業</a>
+                              
                             </div>
               </li>
           </ul>
