--- a/adoption/executive.html
+++ b/adoption/executive.html
@@ -59,9 +59,9 @@
                                   <a href="../company.html" class="index-more">会社概要</a>
                                     <a href="../company/message.html" class="index-more">代表挨拶</a>
                                     <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
-                                    <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
-                                    <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
-                                    <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
+                                    <a href="../company.html#exective-members" class="index-more">グループ役員紹介</a>
+                                    <a href="../company.html#group-companys" class="index-more">グループパートナー企業</a>
+                                    
                                   </div>
                     </li>
                 </ul>
@@ -457,12 +457,12 @@
                 <button class="toggle-btn-footer">＋</button>
                 </div>
                         <div class="accordion-content">
-                            <a href="../company.html" class="index-more"会社概要</a>
-                            <a href="../company/message.html" class="index-more"代表挨拶</a>
-                            <a href="../company/mission.html" class="index-more"経営理念&企業理念</a>
-                            <a href="../company.html#exective-members" class="index-more"グループ役員一覧</a>
-                            <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
-                            <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
+                            <a href="../company.html" class="index-more">会社概要</a>
+                            <a href="../company/message.html" class="index-more">代表挨拶</a>
+                            <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
+                            <a href="../company.html#exective-members" class="index-more">グループ役員紹介</a>
+                            <a href="../company.html#group-companys" class="index-more">グループパートナー企業</a>
+                            
                           </div>
             </li>
         </ul>
