--- a/company/message.html
+++ b/company/message.html
@@ -590,10 +590,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="wp-block-group thd_top-message__text is-layout-constrained wp-block-group-is-layout-constrained">
 <p>私は24歳で起業を志し、20代には20を超える事業立ち上げを経験して参りました。<br><br>
   沢山の事業に挑戦する中で、失敗や批判を受ける場面は数多くありましたし、日本特有の利権の壁、信頼していた仲間に裏切られることを幾度も経験してきました。<br><br>
-  その経験から肌で感じたことは、起業家は誰にも相談できず、悩み続けて、事業が進まない立ち行かなくなるケースが散見されます。<br><br>
-  勿論、その先に成功という未来はないのです。<br><br>
+  そして起業家は誰にも相談できず、悩み続けて、苦しみ、いずれ事業そのものが立ち行かなくなるケースが多く見受けられます。<br><br>
   これから起業する経営者たちは、私と同じような遠回りをして欲しくないという強い想いがあります。<br><br>
-  これからも様々な事業を設計し続ける連続起業家として活動し、1人でも多くの経営者のサポートができれば幸いです。
+  今後も様々な事業を設計し続ける連続起業家として活動し、1人でも多くの経営者のサポートができれば幸いです。<br><br>
+  "人生で大切にしてる人"<br>利益を優先しない、お互いに貢献できるGIVER<br><br>
+  "人生で大事にしてること"<br>朝、希望をもって目覚め、昼は懸命に働き、夜は感謝と共に眠る
 </p>
 
 
