--- a/company.html
+++ b/company.html
@@ -1201,7 +1201,7 @@
             
             
             <div class="wp-block-column thd_group__item__logo is-layout-flow wp-block-column-is-layout-flow">
-              <figure class="wp-block-image size-full"><img fetchpriority="high" decoding="async" width="320" height="320" src="https://placehold.jp/ffffff/ffffff/150x150.png" alt="" class="wp-image-1554"  sizes="(max-width: 320px) 100vw, 320px"></figure>
+              <figure class="wp-block-image size-full"><img fetchpriority="high" decoding="async" width="320" height="320" src="img/company/hashimoto-tax.jpg" alt="" class="wp-image-1554"  sizes="(max-width: 320px) 100vw, 320px"></figure>
               </div>
             </div>
             </div>
