--- a/company.html
+++ b/company.html
@@ -1345,7 +1345,7 @@
             
             
             <div class="wp-block-column thd_group__item__logo is-layout-flow wp-block-column-is-layout-flow">
-              <figure class="wp-block-image size-full"><img fetchpriority="high" decoding="async" width="320" height="320" src="https://placehold.jp/150x150.png" alt="" class="custom-img wp-image-1554 img-company-relapis relapis-img"  sizes="(max-width: 320px) 100vw, 320px"></figure>
+              <figure class="wp-block-image size-full"><img fetchpriority="high" decoding="async" width="320" height="320" src="img/company/merginite.png" alt="" class="custom-img wp-image-1554 img-company-relapis relapis-img"  sizes="(max-width: 320px) 100vw, 320px"></figure>
               </div>
             </div>
             </div>
