--- a/fshd.html
+++ b/fshd.html
@@ -255,7 +255,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="c-front-company__group">ファイナンシャルサービス<br>ホールディングス
               </div>
               <div class="c-front-company__companies">
-                <div class="c-front-company__company">ファイナンシャルサービス<br>ホールディングス株式会社
+                <div class="c-front-company__company">株式会社ファイナンシャルサービス<br>ホールディングス
                 </div>
                 <!-- <div class="c-front-company__company">南青山税理士法人
                 </div>
@@ -481,7 +481,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <footer class="l-footer" id="footer">
 	<div class="l-footer__menu">
-		<div class="l-footer__container"><a class="l-footer__logo" href="/"><img src="img/company/fs_header-logo.png" alt="MINAMI AOYAMA ADVISORY GROUP" /></a>
+		<div class="l-footer__container"><a class="l-footer__logo" href="#"><img src="img/company/fs_header-logo.png" alt="MINAMI AOYAMA ADVISORY GROUP" /></a>
 			<div class="l-footer__menulist-wrapper">
 				<ul class="l-footer__menulist is-first">
 					<li><a href="#">ホーム</a>
