--- a/fshd/privacy-policy.html
+++ b/fshd/privacy-policy.html
@@ -236,7 +236,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 最終改正日　2021年6月28日</h4>
 <br />
 
-<p>ファイナンシャルサービスホールディングスグループ（以下「当グループ」といいます。）は、当グループが取り扱う個人情報を適切に管理運用するために遵守するべき基本的事項として、本プライバシーポリシーを定めます。</p>
+<p>株式会社ファイナンシャルサービスホールディングスグループ（以下「当グループ」といいます。）は、当グループが取り扱う個人情報を適切に管理運用するために遵守するべき基本的事項として、本プライバシーポリシーを定めます。</p>
                         </div><br />
                         <div class="border">
 <h4>１．法令・規範の遵守<br />	当グループは、個人情報の取扱いに関する法令、国が定める指針その他の規範を、常に最新の状態に維持するとともに、これを遵守します。</h4><br />
@@ -377,7 +377,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <footer class="l-footer" id="footer">
 	<div class="l-footer__menu">
-		<div class="l-footer__container"><a class="l-footer__logo" href="/"><img src="../img/company/fs_header-logo.png" alt="MINAMI AOYAMA ADVISORY GROUP" /></a>
+		<div class="l-footer__container"><a class="l-footer__logo" href="#"><img src="../img/company/fs_header-logo.png" alt="MINAMI AOYAMA ADVISORY GROUP" /></a>
 			<div class="l-footer__menulist-wrapper">
 				<ul class="l-footer__menulist is-first">
 					<li><a href="../fshd.html">ホーム</a>
