--- a/fshd/privacy-policy.html
+++ b/fshd/privacy-policy.html
@@ -380,15 +380,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="l-footer__container"><a class="l-footer__logo" href="#"><img src="../img/company/fs_header-logo.png" alt="MINAMI AOYAMA ADVISORY GROUP" /></a>
 			<div class="l-footer__menulist-wrapper">
 				<ul class="l-footer__menulist is-first">
-					<li><a href="../fshd.html">ホーム</a>
+					<li><a href="../fshd/">ホーム</a>
 					</li>
-					<li><a href="../fshd.html#business">事業内容</a>
+					<li><a href="../fshd/#business">事業内容</a>
 					</li>
 					<!-- <li><a href="https://minami-aoyama.jp/company/">法人概要</a>
 					</li>
 					<li><a href="https://minami-aoyama.jp/news/">ニュース</a>
 					</li> -->
-                    <li><a href="../fshd.html">採用情報</a>
+                    <li><a href="../fshd/">採用情報</a>
 					</li>
 				</ul>
 				<ul class="l-footer__menulist is-second">
