--- a/index.html
+++ b/index.html
@@ -3269,7 +3269,7 @@
 
 
                                                 <section class="news-section">
-                                                    <iframe src="https://rewrite-hd.com/news/" width="100%" height="600" style="border:none;"></iframe>
+                                                    <iframe src="https://rewrite-hd.com/news/content/" width="100%" height="600" style="border:none;"></iframe>
                                                   </section>
 
 
