--- a/index.html
+++ b/index.html
@@ -3595,7 +3595,7 @@
                 
             </div>
 
-            <footer>
+            <footer class="footer-wrap">
                 <div class="footer-upper">
                     <ul class="footer-index top">
                         <li>
