--- a/index.html
+++ b/index.html
@@ -3269,7 +3269,13 @@
 
 
                                                 <section class="news-section">
-                                                    <iframe src="https://rewrite-hd.com/news/content/" width="100%" height="600" style="border:none;"></iframe>
+                                                    <iframe
+                                                        id="news-iframe"
+                                                        src="https://rewrite-hd.com/news/content/"
+                                                        style="width: 100%; border: none;"
+                                                        scrolling="no"
+                                                        ></iframe>
+
                                                   </section>
 
 
@@ -3739,6 +3745,7 @@
         <div id="page-end"></div>
         <script src="js/main.js"></script>
         <script src="js/script.js"></script>
+        <script src="js/iframe-resize.js"></script>
     </body>
 </html>
 <!-- Dynamic page generated in 0.275 seconds. -->
