--- a/adoption/employee.html
+++ b/adoption/employee.html
@@ -66,8 +66,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <body id="personality" class="">
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KL67PFT"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KL67PFT"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
     <div class="wrapper">
@@ -178,7 +178,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="subpage_mv2 scroll-anime roll-left">
 		<div class="inner">
 			<div class="page_title">
-        <p class="category">社員採用</p>
+        <p class="category">社員採用<br><span class="cotegory-en">New Graduate</span></p>
 				<h1 class="title">求める人物像<span>PERSONALITY</span></h1>
 			</div>
 		</div>
