--- a/adoption/part.html
+++ b/adoption/part.html
@@ -178,7 +178,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="subpage_mv2 scroll-anime roll-left">
 		<div class="inner">
 			<div class="page_title">
-        <p class="category">アルバイト採用</p>
+        <p class="category">アルバイト採用<br><span class="cotegory-en">Part-timer</span></p>
 				<h1 class="title">求める人物像<span>PERSONALITY</span></h1>
 			</div>
 		</div>
